Fixed maintainbility issues